# Agents

./: .gitignore  ANALYSIS_RAG_++.md  Dockerfile  FUNCTIONALITY_TESTING_DEMO.md  PRESENTATION.md  README.md  agentic .md  call_funtion.py  config.py  main.py  main_bis.py  pyproject.toml  render.yaml  response.md  script.sh  server.py  tests.py
docs/: RAG_OVERVIEW_++.md
functions/: dev_tools.py  edit_file_content.py  edit_file_section.py  get_file_content.py  get_files_info.py  run_python_file.py  search_files.py  write_file_content.py
rag/: README.md  chunker.py  embed.py  retriever.py  schema.py  vectorstore.py  vectorstore_memory.py
web/: index.html  main.js  styles.css
